--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -13,13 +13,17 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # - name: Cache dependencies
-      #   uses: actions/cache@v3
-      #   with:
-      #     path: ~/.npm
-      #     key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-node-
+      - name: Cache dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      - name: Check cache status
+        run: |
+          if [ -d "~/.npm" ]; then echo "Cache is used"; else echo "No cache found"; fi
 
       - name: Install dependencies
         run: npm ci
@@ -34,11 +38,15 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # - name: Restore cache
-      #   uses: actions/cache@v3
-      #   with:
-      #     path: ~/.npm
-      #     key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
+      - name: Restore cache
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
+
+      - name: Check cache status
+        run: |
+          if [ -d "~/.npm" ]; then echo "Cache is used"; else echo "No cache found"; fi
 
       - name: Install dependencies
         run: npm ci
