restore-keys 변경

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -19,7 +19,7 @@ jobs:
           path: ~/.npm
           key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
           restore-keys: |
-            ${{ runner.os }}-node-
+            ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
 
       - name: Check cache status
         run: |
@@ -43,6 +43,8 @@ jobs:
         with:
           path: ~/.npm
           key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
 
       - name: Check cache status
         run: |
