--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Check cache folder
+        run: npm config get cache
+
       - name: Lint
         run: npm run lint
 
