--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -16,12 +16,13 @@ jobs:
       - name: Cache dependencies
         uses: actions/cache@v3
         with:
-          path: /home/runner/.npm
+          path: "**/node_modules"
           key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
 
       - name: Install dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
         run: npm ci
 
       - name: Lint
@@ -37,7 +38,7 @@ jobs:
       - name: Restore cache
         uses: actions/cache@v3
         with:
-          path: /home/runner/.npm
+          path: "**/node_modules"
           key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
