--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -13,7 +13,8 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Cache dependencies
+      - name: Cache node_modules
+        id: cache-node-modules
         uses: actions/cache@v3
         with:
           path: "**/node_modules"
@@ -21,9 +22,9 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
 
-      - name: Install dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: npm ci
+      - name: Install dependencies if cache is missing
+        if: steps.cache-node-modules.outputs.cache-hit != 'true'
+        run: npm install --frozen-lockfile
 
       - name: Lint
         run: npm run lint
@@ -36,6 +37,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Restore cache
+        id: cache-node-modules
         uses: actions/cache@v3
         with:
           path: "**/node_modules"
@@ -43,8 +45,9 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
 
-      - name: Install dependencies
-        run: npm ci
+      - name: Install dependencies if cache is missing
+        if: steps.cache-node-modules.outputs.cache-hit != 'true'
+        run: npm install --frozen-lockfile
 
       - name: Build
         run: npm run build
