--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Install dependencies if cache is missing
         if: steps.cache-node-modules.outputs.cache-hit != 'true'
-        run: npm install --frozen-lockfile
+        run: npm ci
 
       - name: Lint
         run: npm run lint
@@ -49,10 +49,6 @@ jobs:
           key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
-
-      - name: Install dependencies if cache is missing
-        if: steps.cache-node-modules.outputs.cache-hit != 'true'
-        run: npm install --frozen-lockfile
 
       - name: Build
         run: npm run build
