--- a/package.json
+++ b/package.json
@@ -9,18 +9,27 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@emotion/react": "^11.13.3",
+		"@emotion/styled": "^11.13.0",
+		"@mui/material": "^6.1.7",
+		"@tanstack/react-query": "^5.60.5",
+		"next": "14.2.18",
 		"react": "^18",
+		"react-datepicker": "^7.5.0",
 		"react-dom": "^18",
-		"next": "14.2.18"
+		"react-redux": "^9.1.2",
+		"recoil": "^0.7.7",
+		"redux": "^5.0.1",
+		"zustand": "^5.0.1"
 	},
 	"devDependencies": {
-		"typescript": "^5",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
+		"eslint": "^8",
+		"eslint-config-next": "14.2.18",
 		"postcss": "^8",
 		"tailwindcss": "^3.4.1",
-		"eslint": "^8",
-		"eslint-config-next": "14.2.18"
+		"typescript": "^5"
 	}
 }
