--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -18,17 +18,7 @@ jobs:
         with:
           node-version: "20"
 
-      - name: Cache node_modules
-        id: cache-node-modules
-        uses: actions/cache@v3
-        with:
-          path: "**/node_modules"
-          key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
       - name: Install dependencies if cache is missing
-        if: steps.cache-node-modules.outputs.cache-hit != 'true'
         run: npm ci
 
       - name: Lint
@@ -41,14 +31,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Restore cache
-        id: cache-node-modules
-        uses: actions/cache@v3
+      - name: Use Node.js 20
+        uses: actions/setup-node@v3
         with:
-          path: "**/node_modules"
-          key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
+          node-version: "20"
+
+      - name: Install dependencies if cache is missing
+        run: npm ci
 
       - name: Build
         run: npm run build
