--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,7 +1,7 @@
 name: Deploy Next.js to S3 and invalidate CloudFront
 
 on:
-  push:
+  pull_request:
     branches:
       - main
   workflow_dispatch:
